starting responsive next

--- a/index.html
+++ b/index.html
@@ -22,12 +22,6 @@
     </head>
 
     <body>
-        <!--
-        <video id="background-video" autoplay loop muted poster="./img/bckVid.mp4">
-            <source src="./img/bckVid.mp4" type="video/mp4">
-        </video>
-
-        <-->
         <video id="background-video" autoplay loop muted poster="./img/bckVid3.mp4">
             <source src="./img/bckVid3.mp4" type="video/mp4">
         </video>
@@ -37,13 +31,19 @@
         </div>
         <!--NAV-->
         <nav class="navbar navbar-expand-lg  navbar-light sticky-top p-0">
-            <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
-                <img fetchpriority="high" src="./img/LogoS.webp" class="logo" />
-                <h2 class="sub m-0">SNAP</h2>
+            <a href="https://www.unimes.fr/" target="_blank">
+                <img fetchpriority="high" src="./img/unimes2.webp" class="logoU" />
             </a>
-            <h1 class="headerTitle">
-                Service Numérique & Accompagnement Pédagogique
-            </h1>
+            <!--<h2 class="sub m-0">SNAP</h2><-->
+            <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 
+            px-lg-5">
+                <!--
+                <img fetchpriority="high" src="./img/LogoS.webp" class="logo" />
+                <-->
+                <h1 class="headerTitle">
+                    Service Numérique & Accompagnement Pédagogique
+                </h1>
+            </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -161,15 +161,15 @@
         </section>
         <!--ABOUT-->
         <section id="about" class="container-xxl py-6">
-            <div class="container">
-                <div class="row g-5 ">
-                    <div class="col-lg-6 wow fadeInUp " data-wow-delay="0.1s">
+            <div class="container fadeInUp">
+                <div class="shadow row g-5 ">
+                    <div class="col-lg-6 wow  " data-wow-delay="0.1s">
                         <div class="position-relative overflow-hidden ps-5 pt-5 h-100" style="min-height: 400px">
-                            <img class=" shadow position-absolute w-100 h-100" src="img/about-1.webp" alt="" style="object-fit: cover" />
-                            <img class=" position-absolute top-0 start-0  pe-3 pb-3" src="img/about-2.webp" alt="" style="width: 200px; height: 200px" />
+                            <img class="  position-absolute w-100 h-100" src="img/about-1.webp" alt="" style="object-fit: cover" />
+                            <img class=" position-absolute top-0 start-0  pe-3 pb-3 logoBis" src="img/about-2.webp" alt="" style="width: 200px; height: 200px" />
                         </div>
                     </div>
-                    <div class="col-lg-6 wow fadeInUp shadow" data-wow-delay="0.5s">
+                    <div class="col-lg-6 wow " data-wow-delay="0.5s">
                         <div class="h-100">
                             <h1 class="display-6 mb-4 aboutTitle">
                                 Nous accompagnons les enseignants dans leur transformation
@@ -191,7 +191,80 @@
                                 et, surtout, d’assurer le suivi de notre travail commun.
                             </p>
                             <div class="vidWrap">
-                                <iframe width="280" height="158" src="https://www.youtube.com/embed/HCC9A2jVaDg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <iframe width="420" height="237" src="https://www.youtube.com/embed/HCC9A2jVaDg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--ABOUT-->
+        <section id="Actualités" class="container-xxl py-6 about2">
+            <div class="container fadeInUp">
+                <div class="row g-5 ">
+                    <div class="col-lg-12 wow " data-wow-delay="0.5s">
+                        <div class="">
+                            <h1 class="display-6 mb-4 aboutTitle">
+                                Nos prochains évènements
+                            </h1>
+                            <div class="eventW">
+                                <div class="event shadow">
+                                    <div class="eventHeader">
+                                        <i class="fa fa-calendar"></i>
+                                        <p>Rendez-vous pédagogiques - 17/03/2023</p>
+                                    </div>
+                                    <div class="eventSub">
+                                        <img class="" src="img/about-3.webp" alt="" style="width: 300px; height: 200px" />
+                                        <p>
+                                            Dolores sed duo clita tempor justo dolor et
+                                            stet lorem kasd labore dolore lorem ipsum.
+                                            At lorem lorem magna ut et, nonumy et labore
+                                            et tempor diam tempor erat.
+                                            Dolores sed duo clita tempor justo dolor et
+                                            stet lorem kasd labore dolore lorem ipsum.
+                                            At lorem lorem magna ut et, nonumy et labore
+                                            et tempor diam tempor erat.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="event shadow">
+                                    <div class="eventHeader">
+                                        <i class="fa fa-calendar"></i>
+                                        <p>Atelier MOODLE - 04/05/2023</p>
+                                    </div>
+                                    <div class="eventSub">
+                                        <img class="" src="img/about-4.webp" alt="" style="width: 300px; height: 200px" />
+                                        <p>
+                                            Dolores sed duo clita tempor justo dolor et
+                                            stet lorem kasd labore dolore lorem ipsum.
+                                            At lorem lorem magna ut et, nonumy et labore
+                                            et tempor diam tempor erat.
+                                            Dolores sed duo clita tempor justo dolor et
+                                            stet lorem kasd labore dolore lorem ipsum.
+                                            At lorem lorem magna ut et, nonumy et labore
+                                            et tempor diam tempor erat.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="event shadow">
+                                    <div class="eventHeader">
+                                        <i class="fa fa-calendar"></i>
+                                        <p>Hado Geopardy enseignants-étudiants - 06/06/2023</p>
+                                    </div>
+                                    <div class="eventSub">
+                                        <img class="" src="img/about-5.webp" alt="" style="width: 300px; height: 200px" />
+                                        <p>
+                                            Dolores sed duo clita tempor justo dolor et
+                                            stet lorem kasd labore dolore lorem ipsum.
+                                            At lorem lorem magna ut et, nonumy et labore
+                                            et tempor diam tempor erat.
+                                            Dolores sed duo clita tempor justo dolor et
+                                            stet lorem kasd labore dolore lorem ipsum.
+                                            At lorem lorem magna ut et, nonumy et labore
+                                            et tempor diam tempor erat.
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -206,7 +279,7 @@
                     Actualités
                 </h1>
             </div>
-            <iframe src="https://www.unimes.fr/fr/index.html" frameborder="0" border="0" cellspacing="0" title="Site de l'Université de Nîmes" style="border-style: none;width: 100%; height: 100%;" class="shadow"></iframe>
+            <iframe src="https://www.unimes.fr/fr/index/actualites.html" frameborder="0" border="0" cellspacing="0" title="Site de l'Université de Nîmes" style="border-style: none;width: 100%; height: 100%;" class="shadow"></iframe>
             </div>
         </section>
         <!--TOOLS-->
@@ -341,15 +414,14 @@
             </div>
         </section>
         <!--TESTIMONIES-->
-        <section id="témoignages" class="shadow container-xxl py-6">
+        <section id="témoignages" class="container-xxl py-6">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px">
                     <h1 class="display-6 mb-4 title">Témoignages d'enseignants</h1>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-lg-8 wow fadeInUp testiW" data-wow-delay="0.1s">
+                    <div class="col-lg-8 wow fadeInUp shadow testiW" data-wow-delay="0.1s">
                         <div class="owl-carousel testimonial-carousel">
-
                             <div class="testimonial-item text-center">
                                 <div class="position-relative mb-5">
                                     <!--Mettre photo enseignant ?<-->
@@ -359,15 +431,17 @@
                                     </div>
                                 </div>
                                 <p class="fs-4">
-                                    Inutile de dire que sans le SNAP, mes X-mens n'auraient pas reçu la même formation.
+                                    Dolores sed duo clita tempor justo dolor et
+                                    stet lorem kasd labore dolore lorem ipsum.
+                                    At lorem lorem magna ut et, nonumy et labore
+                                    et tempor diam tempor erat.
                                 </p>
                                 <!--Mettre lien projets moodle<-->
                                 <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block testiBtn">Exemple de réalisation<i class="fa fa-search ms-3"></i></a>
                                 <hr class="w-25 mx-auto" />
-                                <h5>Professeur Xavier</h5>
-                                <span>Directeur / télépathe</span>
+                                <h5>Florence Cibba</h5>
+                                <span>Departement Psychologie, Lettres, Langues & Histoire</span>
                             </div>
-
                             <div class="testimonial-item text-center">
                                 <div class="position-relative mb-5">
                                     <!--Mettre photo enseignant<-->
@@ -388,7 +462,6 @@
                                 <h5>Florence Cibba</h5>
                                 <span>Departement Psychologie, Lettres, Langues & Histoire</span>
                             </div>
-
                             <div class="testimonial-item text-center">
                                 <div class="position-relative mb-5">
                                     <!--Mettre photo enseignant<-->
@@ -442,7 +515,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="team-item position-relative">
                             <div class="position-relative teamImgWrap">
                                 <img class="img-fluid" src="img/team-2.webp" alt="" />
@@ -461,7 +534,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="team-item position-relative">
                             <div class="position-relative teamImgWrap">
                                 <img class="img-fluid" src="img/team-3.webp" alt="" />
@@ -480,7 +553,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="team-item position-relative">
                             <div class="position-relative teamImgWrap">
                                 <img class="img-fluid" src="img/team-4.webp" alt="" />
@@ -499,7 +572,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="team-item position-relative">
                             <div class="position-relative teamImgWrap">
                                 <img class="img-fluid" src="img/team-5.webp" alt="" />
@@ -515,7 +588,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="team-item position-relative">
                             <div class="position-relative teamImgWrap">
                                 <img class="img-fluid" src="img/team-6.webp" alt="" />
@@ -555,8 +628,8 @@
                         </p>
                         <p class="mb-2">
                             <i class="fa fa-envelope me-3"></i>
-                            <a href="mailto:Thanos@SNAP.half">
-                                Thanos@SNAP.half
+                            <a href="mailto:snap@unimes.fr">
+                                snap@unimes.fr
                             </a>
                         </p>
                     </div>
