--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 <h1 class="headerTitle">
                     Service Numérique & Accompagnement Pédagogique
                 </h1>
+                <h1 class="headerTitle2">
+                    SNAP
+                </h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -53,6 +56,7 @@
                     <a href="#Actualités" class="nav-item nav-link">Actualités</a>
                     <a href="#outils" class="nav-item nav-link">Outils</a>
                     <a href="" class="nav-item nav-link">Blog</a>
+                    <a href="contact.html" class="nav-item nav-link secondC">Contact</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-plus-square ms-3"></i></a>
                         <div class="dropdown-menu bg-light m-0">
@@ -61,7 +65,7 @@
                             <a href="#équipe" class="dropdown-item">Notre équipe</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block mainC">Nous contacter<i class="fa fa-arrow-right ms-3"></i></a>
+                    <a href="contact.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block mainC">Contact<i class="fa fa-arrow-right ms-3"></i></a>
                 </div>
             </div>
         </nav>
@@ -69,8 +73,8 @@
         <div class="container-fluid p-0 wow fadeIn" data-wow-delay="0.1s">
             <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="w-100" src="img/carousel-1.webp" alt="Image" />
+                    <div class="carousel-item active ">
+                        <img class="w-100 carouIm1" src="img/carousel-1.webp" alt="Image" />
                         <div class="carousel-caption">
                             <div class="container">
                                 <div class="introText1 row justify-content-center">
@@ -85,7 +89,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100" src="img/carousel-2.webp" alt="Image" />
+                        <img class="w-100 carouIm2" src="img/carousel-2.webp" alt="Image" />
                         <div class="carousel-caption">
                             <div class="container">
                                 <div class="introText2 row justify-content-center">
@@ -166,7 +170,7 @@
                     <div class="col-lg-6 wow  " data-wow-delay="0.1s">
                         <div class="position-relative overflow-hidden ps-5 pt-5 h-100" style="min-height: 400px">
                             <img class="  position-absolute w-100 h-100" src="img/about-1.webp" alt="" style="object-fit: cover" />
-                            <img class=" position-absolute top-0 start-0  pe-3 pb-3 logoBis" src="img/about-2.webp" alt="" style="width: 200px; height: 200px" />
+                            <img class=" position-absolute top-0 start-0  logoBis" src="img/about-2b.webp" alt="" style="width: 200px; height: 200px" />
                         </div>
                     </div>
                     <div class="col-lg-6 wow " data-wow-delay="0.5s">
@@ -191,7 +195,7 @@
                                 et, surtout, d’assurer le suivi de notre travail commun.
                             </p>
                             <div class="vidWrap">
-                                <iframe width="420" height="237" src="https://www.youtube.com/embed/HCC9A2jVaDg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <iframe class="shadow" width="420" height="237" src="https://www.youtube.com/embed/HCC9A2jVaDg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
@@ -497,7 +501,7 @@
                 </div>
                 <div class="row g-0 team-items">
                     <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="team-item position-relative">
+                        <div class="team-item shadow position-relative">
                             <div class="position-relative teamImgWrap">
                                 <img class="img-fluid" src="img/team-1.webp" alt="" />
                                 <div class="team-social text-center">
@@ -516,7 +520,7 @@
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="team-item position-relative">
+                        <div class="team-item shadow position-relative">
                             <div class="position-relative teamImgWrap">
                                 <img class="img-fluid" src="img/team-2.webp" alt="" />
                                 <div class="team-social text-center">
@@ -535,7 +539,7 @@
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="team-item position-relative">
+                        <div class="team-item shadow position-relative">
                             <div class="position-relative teamImgWrap">
                                 <img class="img-fluid" src="img/team-3.webp" alt="" />
                                 <div class="team-social text-center">
@@ -554,7 +558,7 @@
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="team-item position-relative">
+                        <div class="team-item shadow position-relative">
                             <div class="position-relative teamImgWrap">
                                 <img class="img-fluid" src="img/team-4.webp" alt="" />
                                 <div class="team-social text-center">
@@ -573,7 +577,7 @@
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="team-item position-relative">
+                        <div class="team-item shadow position-relative">
                             <div class="position-relative teamImgWrap">
                                 <img class="img-fluid" src="img/team-5.webp" alt="" />
                                 <div class="team-social text-center">
@@ -589,7 +593,7 @@
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="team-item position-relative">
+                        <div class="team-item shadow position-relative">
                             <div class="position-relative teamImgWrap">
                                 <img class="img-fluid" src="img/team-6.webp" alt="" />
                                 <div class="team-social text-center">
