responsive : DONE, goign to make hq img

--- a/index.html
+++ b/index.html
@@ -34,12 +34,8 @@
             <a href="https://www.unimes.fr/" target="_blank">
                 <img fetchpriority="high" src="./img/unimes2.webp" class="logoU" />
             </a>
-            <!--<h2 class="sub m-0">SNAP</h2><-->
             <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 
             px-lg-5">
-                <!--
-                <img fetchpriority="high" src="./img/LogoS.webp" class="logo" />
-                <-->
                 <h1 class="headerTitle">
                     Service Numérique & Accompagnement Pédagogique
                 </h1>
@@ -167,10 +163,10 @@
         <section id="about" class="container-xxl py-6">
             <div class="container fadeInUp">
                 <div class="shadow row g-5 ">
-                    <div class="col-lg-6 wow  " data-wow-delay="0.1s">
-                        <div class="position-relative overflow-hidden ps-5 pt-5 h-100" style="min-height: 400px">
-                            <img class="  position-absolute w-100 h-100" src="img/about-1.webp" alt="" style="object-fit: cover" />
-                            <img class=" position-absolute top-0 start-0  logoBis" src="img/about-2b.webp" alt="" style="width: 200px; height: 200px" />
+                    <div class="col-lg-6 wow  aboutWr" data-wow-delay="0.1s">
+                        <div class="position-relative overflow-hidden ps-5 pt-5 h-100 secondImgWrap" style="min-height: 400px">
+                            <img class="  position-absolute w-100 h-100 firstImgAbout" src="img/about-1.webp" alt="" style="object-fit: cover" />
+                            <img class=" position-absolute top-0 start-0  logoBis secondImgAbout" src="img/about-2b.webp" alt="" style="width: 200px; height: 200px" />
                         </div>
                     </div>
                     <div class="col-lg-6 wow " data-wow-delay="0.5s">
@@ -202,23 +198,23 @@
                 </div>
             </div>
         </section>
-        <!--ABOUT-->
+        <!--ACTU-->
         <section id="Actualités" class="container-xxl py-6 about2">
-            <div class="container fadeInUp">
+            <div class="container-xxl py-6 fadeInUp">
                 <div class="row g-5 ">
                     <div class="col-lg-12 wow " data-wow-delay="0.5s">
                         <div class="">
-                            <h1 class="display-6 mb-4 aboutTitle">
+                            <h1 class="display-6 mb-4 aboutTitle title">
                                 Nos prochains évènements
                             </h1>
                             <div class="eventW">
-                                <div class="event shadow">
+                                <div class="event col-lg-12 shadow">
                                     <div class="eventHeader">
                                         <i class="fa fa-calendar"></i>
-                                        <p>Rendez-vous pédagogiques - 17/03/2023</p>
+                                        <p>Rendez-vous pédagogiques 17/03/2023</p>
                                     </div>
                                     <div class="eventSub">
-                                        <img class="" src="img/about-3.webp" alt="" style="width: 300px; height: 200px" />
+                                        <img class="img-fluid" src="img/about-3.webp" alt="" />
                                         <p>
                                             Dolores sed duo clita tempor justo dolor et
                                             stet lorem kasd labore dolore lorem ipsum.
@@ -231,13 +227,13 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="event shadow">
+                                <div class="event col-lg-12 shadow">
                                     <div class="eventHeader">
                                         <i class="fa fa-calendar"></i>
-                                        <p>Atelier MOODLE - 04/05/2023</p>
+                                        <p>Atelier MOODLE 04/05/2023</p>
                                     </div>
                                     <div class="eventSub">
-                                        <img class="" src="img/about-4.webp" alt="" style="width: 300px; height: 200px" />
+                                        <img class="img-fluid" src="img/about-4.webp" alt="" />
                                         <p>
                                             Dolores sed duo clita tempor justo dolor et
                                             stet lorem kasd labore dolore lorem ipsum.
@@ -250,13 +246,13 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="event shadow">
+                                <div class="event col-lg-12 shadow">
                                     <div class="eventHeader">
                                         <i class="fa fa-calendar"></i>
-                                        <p>Hado Geopardy enseignants-étudiants - 06/06/2023</p>
+                                        <p>Hado Geopardy enseignants-étudiants 06/06/2023</p>
                                     </div>
                                     <div class="eventSub">
-                                        <img class="" src="img/about-5.webp" alt="" style="width: 300px; height: 200px" />
+                                        <img class="img-fluid" src="img/about-5.webp" alt="" />
                                         <p>
                                             Dolores sed duo clita tempor justo dolor et
                                             stet lorem kasd labore dolore lorem ipsum.
@@ -275,8 +271,8 @@
                 </div>
             </div>
         </section>
-        <!--ACTU-->
-        <section id="Actualités" class="container-xxl py-6 Actu">
+        <!--ACTU2-->
+        <section id="Actualités2" class="container-xxl py-6 Actu">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow wow2 fadeInUp" data-wow-delay="0.1s" style="max-width: 500px" * />
                 <h1 class="display-12 mb-12 title">
@@ -428,7 +424,6 @@
                         <div class="owl-carousel testimonial-carousel">
                             <div class="testimonial-item text-center">
                                 <div class="position-relative mb-5">
-                                    <!--Mettre photo enseignant ?<-->
                                     <img class="img-fluid rounded-circle mx-auto" src="img/testimonial.webp" alt="" />
                                     <div class="position-absolute top-100 start-50 translate-middle d-flex align-items-center justify-content-center  rounded-circle" style="width: 60px; height: 60px">
                                         <i class="fa fa-quote-left fa-2x text-primary testiFa1"></i>
@@ -448,7 +443,6 @@
                             </div>
                             <div class="testimonial-item text-center">
                                 <div class="position-relative mb-5">
-                                    <!--Mettre photo enseignant<-->
                                     <img class="img-fluid rounded-circle mx-auto" src="img/testimonial.webp" alt="" />
                                     <div class="position-absolute top-100 start-50 translate-middle d-flex align-items-center justify-content-center  rounded-circle" style="width: 60px; height: 60px">
                                         <i class="fa fa-quote-left fa-2x text-primary testiFa1"></i>
@@ -468,7 +462,6 @@
                             </div>
                             <div class="testimonial-item text-center">
                                 <div class="position-relative mb-5">
-                                    <!--Mettre photo enseignant<-->
                                     <img class="img-fluid rounded-circle mx-auto" src="img/testimonial.webp" alt="" />
                                     <div class="position-absolute top-100 start-50 translate-middle d-flex align-items-center justify-content-center  rounded-circle" style="width: 60px; height: 60px">
                                         <i class="fa fa-quote-left fa-2x text-primary testiFa1"></i>
@@ -621,7 +614,7 @@
                     <div class="col-lg-6 subFoot col-md-6">
                         <div class="footLogo">
                             <img fetchpriority="high" src="./img/LogoS.webp" class="logo" />
-                            <h4 class="text-white mb-4">SNAP</h4>
+                            <h4 class="text-white mb-4">Service Numérique & Accompagnement Pédagogique</h4>
                         </div>
                         <p class="mb-2">
                             <i class="fa fa-map-marker-alt me-3"></i> Université de Nîmes - Site Vauban - Bat D, salle D121 - Rue du Dr Georges Salan - CS13019
