--- a/index.html
+++ b/index.html
@@ -117,11 +117,17 @@
                     <div class="col-lg-3 wow fadeIn" data-wow-delay="0.1s">
                         <div class=" shadow d-flex align-items-center h-100 p-4" style="min-height: 150px">
                             <div class="d-flex">
-                                <div class="flex-shrink-0 btn-lg-square introIcon bg-primary">f
+                                <div class="flex-shrink-0 btn-lg-square introIcon bg-primary">
+                                    <!--
                                     <i class="fa fa-search text-white"></i>
+                                    <-->
+                                        
+                                        <i class="fa fa-handshake text-white"></i>
+
+                                        
                                 </div>
                                 <div class="iconTxt ps-4">
-                                    <h5>Identifier vos besoins</h5>
+                                    <h5>Accompagner</h5>
                                 </div>
                             </div>
                         </div>
@@ -130,12 +136,12 @@
                         <div class=" shadow d-flex align-items-center h-100 p-4" style="min-height: 150px">
                             <div class="d-flex">
                                 <div class="flex-shrink-0 btn-lg-square introIcon bg-primary">
-                                    <i class="fa fa-laptop text-white"></i>
+<!--                                    <i class="fa fa-laptop text-white"></i><-->
+                                    <i class="fa fa-comments text-white"></i>
                                 </div>
                                 <div class="iconTxt ps-4">
                                     <h5>
-                                        Vous proposer des solutions numériques
-                                        adaptées
+                                  Soutenir
                                     </h5>
                                 </div>
                             </div>
@@ -145,12 +151,12 @@
                         <div class=" shadow d-flex align-items-center h-100 p-4" style="min-height: 150px">
                             <div class="d-flex">
                                 <div class="flex-shrink-0 btn-lg-square introIcon bg-primary">
-                                    <i class="fa fa-check-square text-white"></i>
+                                    <!--<i class="fa fa-check-square text-white"></i><-->
+                                    <i class="fa fa-lightbulb text-white"></i>
                                 </div>
                                 <div class="iconTxt ps-4">
                                     <h5>
-                                        Faciliter votre prise en main des outils
-                                        dédiés
+                                        Innover
                                     </h5>
                                 </div>
                             </div>
