--- a/index.html
+++ b/index.html
@@ -66,39 +66,106 @@
             </div>
         </nav>
         <!--CAROUSEL-->
-        <div class="container-fluid p-0 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container-fluid p-0 wow fadeIn " data-wow-delay="0.1s">
             <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
+                    <!--start carousel item-->
                     <div class="carousel-item active ">
-                        <img class="w-100 carouIm1" src="img/carousel-1.webp" alt="Image" />
-                        <div class="carousel-caption">
-                            <div class="container">
-                                <div class="introText1 row justify-content-center">
-                                    <div class="col-lg-7">
-                                        <h1 class="display-2 text-light mb-5 animated slideInDown">
-                                            Accompagnement à la transformation
-                                            numérique
-                                        </h1>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="w-100 carouIm2" src="img/carousel-2.webp" alt="Image" />
+                        <img class="w-100 carouIm1" src="img/carousel-0.webp" alt="Image" />
                         <div class="carousel-caption">
                             <div class="container">
                                 <div class="introText2 row justify-content-center">
                                     <div class="col-lg-7">
                                         <h1 class="display-2 text-light mb-5 animated slideInDown">
-                                            Conception de ressources
-                                            pédagogiques
+                                            Soutien des enseignants dans leur approche pédagogique et numérique
                                         </h1>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <!--end carousel item-->
+
+                    <!--start carousel item-->
+                    <div class="carousel-item">
+                        <img class="w-100 carouIm2" src="img/carousel-1.webp" alt="Image" />
+                        <div class="carousel-caption">
+                            <div class="container">
+                                <div class="introText2 row justify-content-center">
+                                    <div class="col-lg-7">
+                                        <h1 class="display-2 text-light mb-5 animated slideInDown">
+                                            Création de contenus et ressources multimédia
+                                        </h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--end carousel item-->
+                                        <!--start carousel item-->
+                    <div class="carousel-item">
+                        <img class="w-100 carouIm2" src="img/carousel-0.webp" alt="Image" />
+                        <div class="carousel-caption">
+                            <div class="container">
+                                <div class="introText2 row justify-content-center">
+                                    <div class="col-lg-7">
+                                        <h1 class="display-2 text-light mb-5 animated slideInDown">
+                                            Accompagnement aux outils pédagogiques et techniques
+                                        </h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--end carousel item-->
+                                        <!--start carousel item-->
+                    <div class="carousel-item">
+                        <img class="w-100 carouIm2" src="img/carousel-1.webp" alt="Image" />
+                        <div class="carousel-caption">
+                            <div class="container">
+                                <div class="introText2 row justify-content-center">
+                                    <div class="col-lg-7">
+                                        <h1 class="display-2 text-light mb-5 animated slideInDown">
+                                            Administration de la plateforme de cours en ligne
+                                        </h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--end carousel item-->
+                                        <!--start carousel item-->
+                    <div class="carousel-item">
+                        <img class="w-100 carouIm2" src="img/carousel-0.webp" alt="Image" />
+                        <div class="carousel-caption">
+                            <div class="container">
+                                <div class="introText2 row justify-content-center">
+                                    <div class="col-lg-7">
+                                        <h1 class="display-2 text-light mb-5 animated slideInDown">
+                                            Aménagement pédagogique & numérique des espaces physiques d’apprentissage
+                                        </h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--end carousel item-->
+                                        <!--start carousel item-->
+                    <div class="carousel-item">
+                        <img class="w-100 carouIm2" src="img/carousel-1.webp" alt="Image" />
+                        <div class="carousel-caption">
+                            <div class="container">
+                                <div class="introText2 row justify-content-center">
+                                    <div class="col-lg-7">
+                                        <h1 class="display-2 text-light mb-5 animated slideInDown">
+                                            Veille des usages pédagogiques et numériques
+                                        </h1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--end carousel item-->                          
                 </div>
                 <button class=" carousel-control-prev" type="button" data-bs-target="#header-carousel" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon iconCar" aria-hidden="true"></span>
@@ -111,20 +178,14 @@
             </div>
         </div>
         <!--INTRO-->
-        <section id="intro" class="container-fluid intro py-5 pt-lg-0">
+        <section id="intro" class=" introSquareText container-fluid intro py-5 pt-lg-0">
             <div class="container py-5 pt-lg-0">
                 <div class="row gx-0">
-                    <div class="col-lg-3 wow fadeIn" data-wow-delay="0.1s">
-                        <div class=" shadow d-flex align-items-center h-100 p-4" style="min-height: 150px">
+                    <div class="col-lg-3 squareText wow fadeIn" data-wow-delay="0.1s">
+                        <div class=" shadow d-flex align-items-center h-100 p-4 ">
                             <div class="d-flex">
                                 <div class="flex-shrink-0 btn-lg-square introIcon bg-primary">
-                                    <!--
-                                    <i class="fa fa-search text-white"></i>
-                                    <-->
-                                        
-                                        <i class="fa fa-handshake text-white"></i>
-
-                                        
+                                    <i class="fa fa-handshake text-white"></i>
                                 </div>
                                 <div class="iconTxt ps-4">
                                     <h5>Accompagner</h5>
@@ -132,23 +193,22 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 wow fadeIn" data-wow-delay="0.3s">
-                        <div class=" shadow d-flex align-items-center h-100 p-4" style="min-height: 150px">
+                    <div class="col-lg-3 squareText wow fadeIn" data-wow-delay="0.3s">
+                        <div class=" shadow d-flex align-items-center h-100 p-4">
                             <div class="d-flex">
                                 <div class="flex-shrink-0 btn-lg-square introIcon bg-primary">
-<!--                                    <i class="fa fa-laptop text-white"></i><-->
                                     <i class="fa fa-comments text-white"></i>
                                 </div>
                                 <div class="iconTxt ps-4">
                                     <h5>
-                                  Soutenir
+                                        Soutenir
                                     </h5>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 wow fadeIn" id="service" data-wow-delay="0.5s">
-                        <div class=" shadow d-flex align-items-center h-100 p-4" style="min-height: 150px">
+                    <div class="col-lg-3 squareText wow fadeIn" id="service" data-wow-delay="0.5s">
+                        <div class=" shadow d-flex align-items-center h-100 p-4">
                             <div class="d-flex">
                                 <div class="flex-shrink-0 btn-lg-square introIcon bg-primary">
                                     <!--<i class="fa fa-check-square text-white"></i><-->
