rewriting intro text + responsive and video responsive : DONE

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                     <a href="#outils" class="nav-item nav-link">Outils</a>
                     <a href="" class="nav-item nav-link">Blog</a>
                     <a href="contact.html" class="nav-item nav-link secondC">Contact</a>
+                         <a href="documentation.html" class="nav-item nav-link secondC">Documentation</a>
+                             <a href="#témoignages" class="nav-item nav-link secondC">Témoignages d'enseignants</a>
+                            <a href="#équipe" class="nav-item nav-link secondC">Notre équipe</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-plus-square ms-3"></i></a>
                         <div class="dropdown-menu bg-light m-0">
