rewriting about + responsive : DONE

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </head>
 
     <body>
-        <video id="background-video" autoplay loop muted poster="./img/bckVid3.mp4">
-            <source src="./img/bckVid3.mp4" type="video/mp4">
+        <video id="background-video" autoplay loop muted poster="./img/bckVid.mp4">
+            <source src="./img/bckVid.mp4" type="video/mp4">
         </video>
         <!--lOADER-->
         <div id="spinner" class="show  position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
@@ -53,9 +53,9 @@
                     <a href="#outils" class="nav-item nav-link">Outils</a>
                     <a href="" class="nav-item nav-link">Blog</a>
                     <a href="contact.html" class="nav-item nav-link secondC">Contact</a>
-                         <a href="documentation.html" class="nav-item nav-link secondC">Documentation</a>
-                             <a href="#témoignages" class="nav-item nav-link secondC">Témoignages d'enseignants</a>
-                            <a href="#équipe" class="nav-item nav-link secondC">Notre équipe</a>
+                    <a href="documentation.html" class="nav-item nav-link secondC">Documentation</a>
+                    <a href="#témoignages" class="nav-item nav-link secondC">Témoignages d'enseignants</a>
+                    <a href="#équipe" class="nav-item nav-link secondC">Notre équipe</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-plus-square ms-3"></i></a>
                         <div class="dropdown-menu bg-light m-0">
@@ -88,7 +88,6 @@
                         </div>
                     </div>
                     <!--end carousel item-->
-
                     <!--start carousel item-->
                     <div class="carousel-item">
                         <img class="w-100 carouIm2" src="img/carousel-1.webp" alt="Image" />
@@ -105,7 +104,7 @@
                         </div>
                     </div>
                     <!--end carousel item-->
-                                        <!--start carousel item-->
+                    <!--start carousel item-->
                     <div class="carousel-item">
                         <img class="w-100 carouIm2" src="img/carousel-0.webp" alt="Image" />
                         <div class="carousel-caption">
@@ -121,7 +120,7 @@
                         </div>
                     </div>
                     <!--end carousel item-->
-                                        <!--start carousel item-->
+                    <!--start carousel item-->
                     <div class="carousel-item">
                         <img class="w-100 carouIm2" src="img/carousel-1.webp" alt="Image" />
                         <div class="carousel-caption">
@@ -137,7 +136,7 @@
                         </div>
                     </div>
                     <!--end carousel item-->
-                                        <!--start carousel item-->
+                    <!--start carousel item-->
                     <div class="carousel-item">
                         <img class="w-100 carouIm2" src="img/carousel-0.webp" alt="Image" />
                         <div class="carousel-caption">
@@ -153,7 +152,7 @@
                         </div>
                     </div>
                     <!--end carousel item-->
-                                        <!--start carousel item-->
+                    <!--start carousel item-->
                     <div class="carousel-item">
                         <img class="w-100 carouIm2" src="img/carousel-1.webp" alt="Image" />
                         <div class="carousel-caption">
@@ -168,7 +167,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--end carousel item-->                          
+                    <!--end carousel item-->
                 </div>
                 <button class=" carousel-control-prev" type="button" data-bs-target="#header-carousel" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon iconCar" aria-hidden="true"></span>
@@ -232,36 +231,61 @@
         <section id="about" class="container-xxl py-6">
             <div class="container fadeInUp">
                 <div class="shadow row g-5 ">
-                    <div class="col-lg-6 wow  aboutWr" data-wow-delay="0.1s">
-                        <div class="position-relative overflow-hidden ps-5 pt-5 h-100 secondImgWrap" style="min-height: 400px">
-                            <img class="  position-absolute w-100 h-100 firstImgAbout" src="img/about-1.webp" alt="" style="object-fit: cover" />
+                    <div class="col-lg-6 wow aboutWr" data-wow-delay="0.1s">
+                        <div class="position-relative overflow-hidden ps-5 pt-5 secondImgWrap" style="min-height: 400px">
+                            <img class="  position-absolute w-90 h-90 firstImgAbout" src="img/about-1.webp" alt="" style="object-fit: cover" />
                             <img class=" position-absolute top-0 start-0  logoBis secondImgAbout" src="img/about-2b.webp" alt="" style="width: 200px; height: 200px" />
                         </div>
+                                      <div class="vidWrap">
+                                <iframe class="shadow" width="420" height="237" src="https://www.youtube.com/embed/HCC9A2jVaDg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            </div>
                     </div>
-                    <div class="col-lg-6 wow " data-wow-delay="0.5s">
+                    <div class="col-lg-6 wow aboutTextW " data-wow-delay="0.5s">
                         <div class="h-100">
+                            <!--
                             <h1 class="display-6 mb-4 aboutTitle">
-                                Nous accompagnons les enseignants dans leur transformation
+                                Le SNAP vous accompagne dans votre transformation
                                 numérique
                             </h1>
+                            <-->
+                                  <h1 class="display-6 mb-4 aboutTitle">
+                                Le SNAP vous accompagne
+                            </h1>
+                            <!--
+                                   <h1 class="display-6 mb-4 aboutTitle">
+                                Le SNAP au service des enseignants
+                            </h1>
+                            <-->
                             <p>
-                                <strong>Nous sommes à votre disposition</strong> afin de répondre ensemble aux nouveaux enjeux de l'enseignement. Nous travaillons en commun ou selon vos directives pour <strong>proposer des supports interactifs pertinents à vos étudiants</strong>.
+                                Le Service Numérique & d’Accompagnement Pédagogique (SNAP) a pour objectif de <strong>soutenir les enseignants et les enseignants-chercheurs</strong> dans leurs projets pédagogiques avec le numérique comme outil facilitateur.
                             </p>
+                            <p class="mb-4">
+                                Notre équipe pluridisciplinaire met à votre disposition son savoir-faire afin de <strong>collaborer à la réussite des étudiants</strong>.</p>
                             <div class="icoW">
                                 <img src="./img/Ico1.webp" class="iconIntro" alt="Acompagnement numérique" />
                                 <img src="./img/Ico2.webp" class="iconIntro" alt="Acompagnement numérique" />
                             </div>
                             <p class="mb-4">
-                                Pour autant, une fois que notre accompagnement a porté ses fruits, nous restons à votre service afin de
-                                <strong>réfléchir ensemble à des pistes d’amélioration</strong>, de
-                                répondre à de nouvelles problématiques, de
-                                créer en collaboration des supports pédagogiques
-                                interactifs
-                                et, surtout, d’assurer le suivi de notre travail commun.
-                            </p>
-                            <div class="vidWrap">
-                                <iframe class="shadow" width="420" height="237" src="https://www.youtube.com/embed/HCC9A2jVaDg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                            </div>
+                                Notre travail, adapté à vos obligations et besoins spécifiques, s’articule autour de la <strong>création</strong>, de l’<strong>innovation</strong> et de l’<strong>ingénierie pédagogique</strong> pour répondre ensemble aux nouveaux enjeux de l'enseignement.</p>
+              
+                            <p class="">
+                                <strong>Les missions du SNAP :</strong>
+                            <ul>
+                                <li><strong>Vous Accompagner </strong> dans votre approche pédagogique et numérique.</li>
+                                <li>
+                                    <strong>Hybrider ou enrichir</strong> vos enseignements.</li>
+                                <li>
+                                    <strong>Administrer</strong> la <a href="https://cours.unimes.fr/" target="_blank"> plateforme de cours en ligne</a> et <strong> vous former</strong> à son utilisation.</li>
+                                <li>
+                                    <strong>Faciliter votre prise en main</strong> des outils pédagogiques et numériques.</li>
+                                <li>
+                                    <strong>Valoriser</strong> le métier d’enseignant et <strong>diffuser</strong> l’innovation pédagogique.</li>
+                                <li>
+                                    <strong>Assurer une veille</strong> des usages pédagogiques et numériques. </li>
+                                <li>
+                                    <strong>Conduire l’aménagement pédagogique & numérique</strong> des espaces physiques d’apprentissages.
+                                </li>
+                            </ul></p>
                         </div>
                     </div>
                 </div>
