--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
                             <img class="  position-absolute w-90 h-90 firstImgAbout" src="img/about-1.webp" alt="" style="object-fit: cover" />
                             <img class=" position-absolute top-0 start-0  logoBis secondImgAbout" src="img/about-2b.webp" alt="" style="width: 200px; height: 200px" />
                         </div>
-                                      <div class="vidWrap">
-                                <iframe class="shadow" width="420" height="237" src="https://www.youtube.com/embed/HCC9A2jVaDg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                            </div>
+                        <div class="vidWrap">
+                            <iframe class="shadow" width="420" height="237" src="https://www.youtube.com/embed/HCC9A2jVaDg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        </div>
                     </div>
                     <div class="col-lg-6 wow aboutTextW " data-wow-delay="0.5s">
                         <div class="h-100">
@@ -248,7 +248,7 @@
                                 numérique
                             </h1>
                             <-->
-                                  <h1 class="display-6 mb-4 aboutTitle">
+                            <h1 class="display-6 mb-4 aboutTitle">
                                 Le SNAP vous accompagne
                             </h1>
                             <!--
@@ -267,25 +267,26 @@
                             </div>
                             <p class="mb-4">
                                 Notre travail, adapté à vos obligations et besoins spécifiques, s’articule autour de la <strong>création</strong>, de l’<strong>innovation</strong> et de l’<strong>ingénierie pédagogique</strong> pour répondre ensemble aux nouveaux enjeux de l'enseignement.</p>
-              
                             <p class="">
                                 <strong>Les missions du SNAP :</strong>
-                            <ul>
-                                <li><strong>Vous Accompagner </strong> dans votre approche pédagogique et numérique.</li>
-                                <li>
-                                    <strong>Hybrider ou enrichir</strong> vos enseignements.</li>
-                                <li>
-                                    <strong>Administrer</strong> la <a href="https://cours.unimes.fr/" target="_blank"> plateforme de cours en ligne</a> et <strong> vous former</strong> à son utilisation.</li>
-                                <li>
-                                    <strong>Faciliter votre prise en main</strong> des outils pédagogiques et numériques.</li>
-                                <li>
-                                    <strong>Valoriser</strong> le métier d’enseignant et <strong>diffuser</strong> l’innovation pédagogique.</li>
-                                <li>
-                                    <strong>Assurer une veille</strong> des usages pédagogiques et numériques. </li>
-                                <li>
-                                    <strong>Conduire l’aménagement pédagogique & numérique</strong> des espaces physiques d’apprentissages.
-                                </li>
-                            </ul></p>
+                                <ul>
+                                    <li><strong>Vous Accompagner </strong> dans votre approche pédagogique et numérique.</li>
+                                    <li>
+                                        <strong>Hybrider ou enrichir</strong> vos enseignements.</li>
+                                    <li>
+                                        <strong>Administrer</strong> la <a href="https://cours.unimes.fr/" target="_blank"> plateforme de cours en ligne</a> et <strong> vous former</strong> à son utilisation.</li>
+                                    <li>
+                                        <strong>Faciliter votre prise en main</strong> des outils pédagogiques et numériques.</li>
+                                    <li>
+                                        <strong>Valoriser</strong> le métier d’enseignant et <strong>diffuser</strong> l’innovation pédagogique.</li>
+                                    <li>
+                                        <strong>Assurer une veille</strong> des usages pédagogiques et numériques. </li>
+                                    <li>
+                                        <strong>Conduire l’aménagement pédagogique & numérique</strong> des espaces physiques d’apprentissages.
+                                    </li>
+                                </ul>
+                            </p>
+
                         </div>
                     </div>
                 </div>
@@ -380,129 +381,109 @@
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow wow2 fadeInUp" data-wow-delay="0.1s" style="max-width: 500px" * />
                 <h1 class="display-6 mb-4 title">
-                    Créons ensemble du contenu pédagogique multimédia
+                    Notre équipe met à votre disposition son savoir-faire
                 </h1>
             </div>
             <div class=" row g-4 justify-content-center cardRow">
+                <!-- first Tool item start-->
                 <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
                         <div class="card text-center p-4 pt-0">
-                            <h5 class="mb-3">Rendez-vous d'accompagnement</h5>
+                            <h5 class="mb-3">Optimiser votre parcours pédagogique</h5>
                             <p>
-                                Se concerter pour numériser vos enseignements
-                            </p>
-                        </div>
-                        <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/courses-6.webp" alt="" />
-                            <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="documentation.html/#rendez-vous">En savoir plus</a>
-                                <!--link to contact page-->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
-                        <div class="card  text-center p-4 pt-0">
-                            <h5 class="mb-3">Plateforme Moodle</h5>
-                            <p>
-                                Vous donner les moyens de fournir expériences d'apprentissage en ligne de qualité
+                                Hybridation, enrichissement, scénarisation d’enseignement, guider les étudiants vers l'autonomie, dynamiser l’activité des apprenants...
                             </p>
                         </div>
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/courses-1.webp" alt="" />
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="documentation.html/#moodle">En savoir plus</a>
-                                <!--link to doc page + #-->
+                                <!--link to -->
+                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!--first Tool item end-->
+                <!--Tool item start-->
                 <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
                         <div class="card text-center p-4 pt-0">
-                            <h5 class="mb-3">h5p</h5>
+                            <h5 class="mb-3">Créer du contenu et des ressources multimédia</h5>
                             <p>
-                                Pour ludifier les apprentissages
-                            </p>
-                        </div>
-                        <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/courses-4.webp" alt="" />
-                            <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="documentation.html/#h5p">En savoir plus</a>
-                                <!--link to doc page + #-->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
-                        <div class="card text-center p-4 pt-0">
-                            <h5 class="mb-3">Fiches Conseil</h5>
-                            <p>
-                                Vous conseiller et vous accompagner dans l'utilisation des outils numériques
-                            </p>
-                        </div>
-                        <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/courses-3.webp" alt="" />
-                            <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="documentation.html">En savoir plus</a>
-                                <!--link to doc page-->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
-                        <div class="card text-center p-4 pt-0">
-                            <h5 class="mb-3">Genially</h5>
-                            <p>
-                                Vous permettre de concevoir des contenus dynamiques
+                                Capsule vidéo de cours, module de cours interactif, infographie, activité pédagogique ludique…
                             </p>
                         </div>
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/courses-2.webp" alt="" />
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="documentation.html/#genially">En savoir plus</a>
-                                <!--link to doc page + #-->
+                                <!--link to -->
+                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!--Tool item end-->
+                <!--Tool item start-->
                 <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
                         <div class="card text-center p-4 pt-0">
-                            <h5 class="mb-3">Infographies personnalisées</h5>
+                            <h5 class="mb-3">
+                                Prendre rendez-vous pour un accompagnement personnalisé
+                            </h5>
                             <p>
-                                Pour illustrer vos contenus
+                                Individuel ou en groupe - aide à la prise en main des logiciels, de la plateforme en ligne, présentation des équipements numériques dans les salles…
                             </p>
+                        </div>
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid" src="img/courses-3.webp" alt="" />
+                            <div class="courses-overlay">
+                                <!--link to -->
+                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--Tool item end-->
+                <!--Tool item start-->
+                <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
+                        <div class="card text-center p-4 pt-0">
+                            <h5 class="mb-3"> Mettre en place une évaluation de vos enseignements</h5>
+                            <p>
+                                Evaluation des Enseignements par les Etudiants (EEE), évaluation formative, évaluation sommative…
+                            </p>
+                        </div>
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid" src="img/courses-4.webp" alt="" />
+                            <div class="courses-overlay">
+                                <!--link to -->
+                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--Tool item end-->
+                <!--Tool item start-->
+                <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
+                        <div class="card text-center p-4 pt-0">
+                            <h5 class="mb-3">Nous rencontrer et échanger</h5>
+                            <p>
+                                Pour discuter d’innovation pédagogique, aborder une problématique précise, être conseillé à l’utilisation d’un outil numérique ou débattre de votre série préférée, le SNAP est votre interlocuteur privilégié.
+                            </p>
+                            <
                         </div>
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/courses-5.webp" alt="" />
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="documentation.html/#infographies">En savoir plus</a>
-                                <!--link to doc page + # ?-->
+                                <!--link to -->
+                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
-                        <div class="card text-center p-4 pt-0">
-                            <h5 class="mb-3">Créations vidéo</h5>
-                            <p>
-                                Diversifier les supports d'apprentissage
-                            </p>
-                        </div>
-                        <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/courses-7.webp" alt="" />
-                            <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="documentation.html/#vidéo">En savoir plus</a>
-                                <!--link to doc page + # ?-->
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <!--Tool item end-->
+            </div>
             </div>
             </div>
         </section>
@@ -586,6 +567,16 @@
                     </h1>
                 </div>
                 <div class="row g-0 team-items">
+                    <div class="col-lg-12 col-md-12 wow fadeInUp" data-wow-delay="0.1s">
+                        <P class="display-6 mb-4">
+                            L’équipe du SNAP ressemble à un équipage de vaisseau, si chacun amène son expertise, tous regardent dans la même direction afin de mener les projets à bon port :
+                            Des ingénieures pédagogiques pour comprendre les enjeux de la transmission de connaissance et accompagner les enseignants en leur proposant des solutions innovantes et adaptées.
+                            Un ingénieur scénariste, à même de ludifier les activités numériques et d’optimiser la trame de votre parcours pédagogique pour maximiser l’engagement des apprenants.
+                            Un UI / UX designer, afin de s’assurer que l’expérience numérique soit aussi efficiente qu’agréable pour les enseignants comme les étudiants.
+                            Un Chef de projet numérique, pour coordonner les actions et pérenniser les missions innovantes.
+                        </P>
+                
+                    </div>
                     <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item shadow position-relative">
                             <div class="position-relative teamImgWrap">
